# hello-ark-circom

./: Cargo.toml  README.md
circuits/: circom1_multiplier.r1cs  circom1_multiplier.wasm
src/: main.rs
