[package]
name = "hello-ark-circom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Some Rust git config issue / package typo?
#ark-circom = { git = "https://github.com/oskarth/ark-circom" }
ark-circom = { git = "https://github.com/oskarth/ark-circom", features = ["circom-2"] }
#ark-circom = { git = "ssh://git@github.com/gakonst/ark-circom.git" }

# Possibly needed to build:
# cargo_metadata = "0.14.1"
ethers = { git = "https://github.com/gakonst/ethers-rs" }

# ZKP generation
ark-std = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.3.0" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"] }

## Error handling
color-eyre = "0.5"
